<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bitsapplied.descartes</groupId>
  <artifactId>descartes-mcp</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>descartes-mcp</name>
  <description>MCP server for java. Deep introspection and REPL out of the box</description>
  
  	<dependencies>
		<dependency>
            <groupId>io.modelcontextprotocol.sdk</groupId>
            <artifactId>mcp</artifactId>
            <version>0.11.1</version>
        </dependency>
        <dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.24.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.24.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>2.24.1</version>
		</dependency>
        		<!-- TEST SCOPE -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.15.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.11.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite-engine</artifactId>
			<version>1.11.3</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.15.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.26.3</version>
			<scope>test</scope>
		</dependency>

		<!-- ASM for bytecode analysis -->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>9.7</version>
		</dependency>

  	</dependencies>

	<build>
		<!-- Set the final artifact name to include the timestamp -->
		<finalName>descartes-mcp-${timestamp}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>false</filtering>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>set-timestamp</id>
						<phase>validate</phase>
						<goals>
							<goal>timestamp-property</goal>
						</goals>
						<configuration>
							<!-- This sets the property 'timestamp' with the current build timestamp -->
							<name>timestamp</name>
							<pattern>yyyyMMdd-HHmmss</pattern>
							<!-- Use English locale to avoid platform-dependent formatting -->
							<locale>en_US</locale>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>23</source>
					<target>23</target>
				</configuration>
			</plugin>

			<!-- Source Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<extensions>false</extensions>
				<inherited>true</inherited>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Exec Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<mainClass>com.bitsapplied.descartes.example.SimpleMCPServerExample</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<propertiesEncoding>UTF-8</propertiesEncoding>
				</configuration>
			</plugin>

			<!-- Assembly Plugin with Agent Support -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.bitsapplied.descartes.example.SimpleMCPServerExample</mainClass>
						</manifest>
						<manifestEntries>
							<!-- Java Agent manifest entries for hot reload -->
							<Premain-Class>com.bitsapplied.descartes.hotreload.agent.HotReloadAgent</Premain-Class>
							<Agent-Class>com.bitsapplied.descartes.hotreload.agent.HotReloadAgent</Agent-Class>
							<Can-Redefine-Classes>true</Can-Redefine-Classes>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
							<Can-Set-Native-Method-Prefix>false</Can-Set-Native-Method-Prefix>
						</manifestEntries>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Surefire Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<!-- Exclude test suites to avoid running tests twice -->
						<exclude>**/TestSuite.java</exclude>
						<!-- Exclude concurrency test suite and individual concurrency tests -->
						<exclude>**/ConcurrencyTestSuite.java</exclude>
						<exclude>**/*ConcurrencyTest.java</exclude>
						<exclude>**/*ConcurrentTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
	    <profile>
           <id>eclipse-m2e</id>
           <activation>
             <property>
               <name>m2e.version</name>
             </property>
           </activation>
           <build>
             <directory>${project.basedir}/target-eclipse</directory>
           </build>
        </profile>
		<!-- Profile to run concurrency tests -->
		<profile>
			<id>concurrency-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.5.2</version>
						<configuration>
							<argLine>-XX:+EnableDynamicAgentLoading</argLine>
							<includes>
								<include>**/ConcurrencyTestSuite.java</include>
							</includes>
							<excludes>
								<!-- Override default excludes to run only the concurrency suite -->
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profile to run all tests including concurrency tests -->
		<profile>
			<id>all-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.5.2</version>
						<configuration>
							<argLine>-XX:+EnableDynamicAgentLoading</argLine>
							<includes>
								<include>**/*Test.java</include>
								<include>**/*TestSuite.java</include>
							</includes>
							<excludes>
								<!-- No excludes - run everything -->
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profile to run hot reload tests with agent -->
		<profile>
			<id>hot-reload-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.5.2</version>
						<configuration>
							<argLine>-XX:+EnableDynamicAgentLoading -javaagent:${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar</argLine>
							<includes>
								<include>**/HotReload*Test.java</include>
								<include>**/Hot*ReloadToolTest.java</include>
							</includes>
						</configuration>
					</plugin>
					<!-- Ensure the agent JAR is built before tests -->
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.7.1</version>
						<executions>
							<execution>
								<id>make-assembly</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<!-- Profile to run the example server with hot reload agent -->
		<profile>
			<id>run-with-agent</id>
			<build>
				<plugins>
					<!-- First ensure the agent JAR is built -->
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.7.1</version>
						<executions>
							<execution>
								<phase>compile</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>${project.artifactId}-${project.version}</finalName>
							<appendAssemblyId>true</appendAssemblyId>
							<attach>false</attach>
							<archive>
								<manifest>
									<mainClass>com.bitsapplied.descartes.example.SimpleMCPServerExample</mainClass>
								</manifest>
								<manifestEntries>
									<Premain-Class>com.bitsapplied.descartes.hotreload.agent.HotReloadAgent</Premain-Class>
									<Agent-Class>com.bitsapplied.descartes.hotreload.agent.HotReloadAgent</Agent-Class>
									<Can-Redefine-Classes>true</Can-Redefine-Classes>
									<Can-Retransform-Classes>true</Can-Retransform-Classes>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>
					
					<!-- Run the example with the agent using exec:exec to launch new JVM -->
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.5.0</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<executable>java</executable>
							<arguments>
								<!-- JVM flags -->
								<argument>-XX:+EnableDynamicAgentLoading</argument>
								<argument>-javaagent:${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
								<!-- System properties -->
								<argument>-Ddescartes.continuous=true</argument>
								<!-- Classpath -->
								<argument>-cp</argument>
								<argument>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
								<!-- Main class -->
								<argument>com.bitsapplied.descartes.example.SimpleMCPServerExample</argument>
								<!-- Program arguments -->
								<argument>--continuous</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>